spring Crud test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/mycarwash
+spring.datasource.url=jdbc:mysql://localhost:3306/mycarwash?serverTimezone=Australia/Sydney
 spring.datasource.username=root
 spring.datasource.password=
 
