--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <start-class>com.mcw.mycarwash.MycarwashApplication</start-class>
     </properties>
 
     <dependencies>
