--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/mycarwash?serverTimezone=Australia/Sydney
+#spring.datasource.url=jdbc:mysql://localhost:3306/mycarwash?serverTimezone=Australia/Sydney
+spring.datasource.url=jdbc:mysql://localhost:3306/mycarwash_live?serverTimezone=Australia/Sydney
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.servlet.multipart.max-file-size=2000KB
+spring.servlet.multipart.max-request-size=2000KB
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
