--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,27 @@
-spring.jpa.hibernate.ddl-auto=none
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/mycarwash?serverTimezone=Australia/Sydney
 spring.datasource.url=jdbc:mysql://localhost:3306/mycarwash_live?serverTimezone=Australia/Sydney
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
 
-spring.servlet.multipart.max-file-size=2000KB
-spring.servlet.multipart.max-request-size=2000KB
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=trace
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=3MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=3MB
+
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.type=trace
